test: add unit tests for AnomalyDetectionServiceImpl