@@ -1,5 +1,7 @@
 package com.cobanoglu.anomalydetectionservice.service;
 
+import com.cobanoglu.anomalydetectionservice.exception.AnomalyNotFoundException;
+import com.cobanoglu.anomalydetectionservice.exception.InvalidAirDataException;
 import com.cobanoglu.anomalydetectionservice.model.AirQualityResponse;
 import com.cobanoglu.anomalydetectionservice.model.Anomaly;
 import com.cobanoglu.anomalydetectionservice.model.PollutantData;
@@ -10,10 +12,10 @@ import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
+import org.springframework.test.util.ReflectionTestUtils;
 
 import java.time.Instant;
-import java.util.List;
-import java.util.ArrayList;
+import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
@@ -29,72 +31,118 @@ class AnomalyDetectionServiceImplTest {
     @BeforeEach
     void setUp() {
         MockitoAnnotations.openMocks(this);
+        ReflectionTestUtils.setField(anomalyDetectionService, "aqiThreshold", 3);
     }
 
     @Test
     void testCheckForAnomalies_ThresholdExceeded() {
         AirQualityResponse.AirData airData = new AirQualityResponse.AirData();
-        AirQualityResponse.MainData mainData = new AirQualityResponse.MainData();
-        mainData.setAqi(5.0);
-        airData.setMain(mainData);
-
-        PollutantData pollutantData = new PollutantData();
-        pollutantData.setPm2_5(50.0);
-        airData.setComponents(pollutantData);
-
+        airData.setMain(new AirQualityResponse.MainData() {{ setAqi(5.0); }});
+        airData.setComponents(new PollutantData() {{ setPm2_5(50.0); }});
         airData.setLat(41.0);
         airData.setLon(29.0);
         airData.setDt(Instant.now().toEpochMilli());
 
         AirQualityResponse response = new AirQualityResponse();
-        response.setList(List.of(airData));
+        response.setList(Collections.singletonList(airData));
 
-        when(anomalyRepository.findByTimestampBetween(anyLong(), anyLong())).thenReturn(new ArrayList<>());
+        when(anomalyRepository.findByTimestampBetween(anyLong(), anyLong())).thenReturn(Collections.emptyList());
 
         anomalyDetectionService.checkForAnomalies(response);
-
         verify(anomalyRepository, times(1)).save(any(Anomaly.class));
     }
 
     @Test
     void testCheckForAnomalies_NullResponse() {
-        anomalyDetectionService.checkForAnomalies(null);
-        verify(anomalyRepository, times(0)).save(any());
+        assertThrows(InvalidAirDataException.class, () -> anomalyDetectionService.checkForAnomalies(null));
+    }
+
+    @Test
+    void testCheckForAnomalies_NullList() {
+        AirQualityResponse response = new AirQualityResponse();
+        response.setList(null);
+        assertThrows(InvalidAirDataException.class, () -> anomalyDetectionService.checkForAnomalies(response));
+    }
+
+    @Test
+    void testCheckForAnomalies_NullMainOrComponents() {
+        AirQualityResponse.AirData airData = new AirQualityResponse.AirData();
+        airData.setMain(null);
+        AirQualityResponse response = new AirQualityResponse();
+        response.setList(Collections.singletonList(airData));
+
+        anomalyDetectionService.checkForAnomalies(response);
+        verify(anomalyRepository, never()).save(any());
+    }
+
+    @Test
+    void testCheckForAnomalies_SaveFails() {
+        AirQualityResponse.AirData airData = new AirQualityResponse.AirData();
+        airData.setMain(new AirQualityResponse.MainData() {{ setAqi(10.0); }});
+        airData.setComponents(new PollutantData() {{ setPm2_5(100.0); }});
+        airData.setLat(41.0);
+        airData.setLon(29.0);
+        airData.setDt(Instant.now().toEpochMilli());
+
+        AirQualityResponse response = new AirQualityResponse();
+        response.setList(Collections.singletonList(airData));
+
+        when(anomalyRepository.findByTimestampBetween(anyLong(), anyLong())).thenReturn(Collections.emptyList());
+        doThrow(new RuntimeException("db fail")).when(anomalyRepository).save(any());
+
+        assertThrows(RuntimeException.class, () -> anomalyDetectionService.checkForAnomalies(response));
     }
 
     @Test
     void testCalculateStandardDeviation() {
-        Anomaly anomaly1 = Anomaly.builder().aqi(5).build();
-        Anomaly anomaly2 = Anomaly.builder().aqi(7).build();
-        Anomaly anomaly3 = Anomaly.builder().aqi(9).build();
-
-        List<Anomaly> anomalies = List.of(anomaly1, anomaly2, anomaly3);
-
-        double mean = 7.0;
-        double stdDev = anomalyDetectionService.calculateStandardDeviation(anomalies, mean);
-
+        List<Anomaly> list = Arrays.asList(
+                Anomaly.builder().aqi(5).build(),
+                Anomaly.builder().aqi(7).build(),
+                Anomaly.builder().aqi(9).build()
+        );
+        double stdDev = anomalyDetectionService.calculateStandardDeviation(list, 7);
         assertTrue(stdDev > 0);
     }
 
     @Test
     void testFindNearbyAnomalies() {
-        Anomaly anomaly1 = Anomaly.builder().lat(41.0).lon(29.0).build();
-        Anomaly anomaly2 = Anomaly.builder().lat(41.5).lon(29.5).build();
-
-        List<Anomaly> anomalies = List.of(anomaly1, anomaly2);
-
-        List<Anomaly> nearby = anomalyDetectionService.findNearbyAnomalies(anomalies, 41.0, 29.0, 30.0);
-
-        assertEquals(1, nearby.size());
+        List<Anomaly> list = Arrays.asList(
+                Anomaly.builder().lat(41.0).lon(29.0).build(),
+                Anomaly.builder().lat(50.0).lon(40.0).build()
+        );
+        List<Anomaly> result = anomalyDetectionService.findNearbyAnomalies(list, 41.0, 29.0, 100);
+        assertEquals(1, result.size());
     }
 
     @Test
     void testGetAllAnomalies() {
-        List<Anomaly> anomalies = List.of(new Anomaly());
-        when(anomalyRepository.findAll()).thenReturn(anomalies);
+        when(anomalyRepository.findAll()).thenReturn(Collections.singletonList(new Anomaly()));
+        assertEquals(1, anomalyDetectionService.getAllAnomalies().size());
+    }
 
-        List<Anomaly> result = anomalyDetectionService.getAllAnomalies();
+    @Test
+    void testGetAnomaliesBetween() {
+        when(anomalyRepository.findByTimestampBetween(anyLong(), anyLong())).thenReturn(Collections.singletonList(new Anomaly()));
+        assertEquals(1, anomalyDetectionService.getAnomaliesBetween(1, 2).size());
+    }
 
-        assertEquals(1, result.size());
+    @Test
+    void testGetAnomalyById_Found() {
+        Anomaly anomaly = new Anomaly();
+        when(anomalyRepository.findById(1L)).thenReturn(Optional.of(anomaly));
+        assertEquals(anomaly, anomalyDetectionService.getAnomalyById(1L));
+    }
+
+    @Test
+    void testGetAnomalyById_NotFound() {
+        when(anomalyRepository.findById(1L)).thenReturn(Optional.empty());
+        assertThrows(AnomalyNotFoundException.class, () -> anomalyDetectionService.getAnomalyById(1L));
+    }
+
+    @Test
+    void testGetLatestAnomaly() {
+        Optional<Anomaly> anomaly = Optional.of(new Anomaly());
+        when(anomalyRepository.findTopByOrderByTimestampDesc()).thenReturn(anomaly);
+        assertTrue(anomalyDetectionService.getLatestAnomaly().isPresent());
     }
 }
